--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,4 +21,5 @@ dev_dependencies:
 flutter:
   assets:
     - assets/
+    - assets/projects_previews/
   uses-material-design: true                                     
