--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
   url_launcher: ^6.0.6
   flutter_icons: ^1.1.0
 
+  # Firebase
+  firebase_core: ^1.3.0
+  cloud_firestore: ^2.2.2
+  firebase_analytics: ^8.1.2
+
 
 dev_dependencies:
   flutter_test:
