--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,18 +5,18 @@ publish_to: 'none'
 version: 1.4.1+8
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  url_launcher: ^6.0.6
-  flutter_icons: ^1.1.0
+  url_launcher: ^6.0.17
 
   # Firebase
-  firebase_core: ^1.3.0
-  cloud_firestore: ^2.2.2
-  firebase_analytics: ^8.1.2
+  firebase_core: ^1.10.6
+  cloud_firestore: ^3.1.5
+  firebase_analytics: ^9.0.4
+  flutter_svg: ^1.0.0
 
 
 dev_dependencies:
