⚙ changed app name to 'laith_shono'

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "portfolio",
-    "short_name": "portfolio",
+    "name": "Laith Shono",
+    "short_name": "laith_shono",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
