--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: portfolio
-description: A new Flutter project.
+name: laith_shono
+description: Laith Shono. Software developer based in Riyadh
 
 publish_to: 'none' 
 version: 1.4.1+8
