--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter 
+
   url_launcher: ^6.0.17
 
   # Firebase
@@ -24,6 +27,7 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  generate: true
   assets:
     - assets/
   uses-material-design: true                                     
