--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   firebase_analytics: ^9.0.4
   flutter_svg: ^1.0.0
   cached_network_image: ^3.2.0
+  firebase_auth: ^3.3.15
 
 
 dev_dependencies:
