--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^1.0.0
   cached_network_image: ^3.2.0
   firebase_auth: ^3.3.15
+  google_fonts: ^3.0.1
 
 
 dev_dependencies:
